# math2wolfram

./: README.md  pyproject.toml
.github/workflows/: publish.yml
math2wolfram/: __init__.py  __main__.py  config.py  converter.py  errors.py  sympy_executor.py
mathio/: __init__.py  __main__.py  ast_nodes.py  converter.py  errors.py  parser.py  sympy_executor.py  tokenizer.py  wolfram_generator.py
tests/: test_generator.py  test_integration.py  test_parser.py  test_sympy_executor.py  test_tokenizer.py
