[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "math2wolfram"
version = "0.1.0"
description = "Convert custom mathematical notation to Wolfram Language expressions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8"]
execute = ["sympy>=1.12"]

[tool.setuptools.packages.find]
where = ["."]
