[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mathio"
version = "0.1.0"
description = "Parse custom math notation and evaluate symbolically with SymPy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["sympy>=1.12"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
